// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`menu-button > passes through additional html attributes 1`] = `
<span
  class="fake-menu-button class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  style="color:red"
  type="number"
>
  <button
    aria-expanded="false"
    class="fake-menu-button__button btn btn--secondary"
    data-ebayui=""
    icon-only=""
    type="button"
  >
    <!--F#7-->
    <span
      class="btn__cell"
    >
      <svg
        aria-hidden="true"
        class="icon icon--12"
        focusable="false"
      >
        <defs>
          <symbol
            id="icon-chevron-down-12"
            viewBox="0 0 12 12"
          >
            <path
              clip-rule="evenodd"
              d="M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"
              fill-rule="evenodd"
            />
          </symbol>
        </defs>
        <use
          href="#icon-chevron-down-12"
        />
      </svg>
    </span>
    <!--F/-->
  </button>
  <span
    class="fake-menu-button__menu"
    tabindex="-1"
  >
    <ul
      class="fake-menu__items"
      id="s0-@content-menu"
      tabindex="-1"
    />
  </span>
</span>
`;

exports[`menu-button > passes through additional html attributes 2`] = `
<span
  class="fake-menu-button class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  style="color:red"
  type="number"
>
  <button
    aria-expanded="false"
    class="fake-menu-button__button btn btn--secondary"
    data-ebayui=""
    icon-only=""
    type="button"
  >
    <!--F#7-->
    <span
      class="btn__cell"
    >
      <svg
        aria-hidden="true"
        class="icon icon--12"
        focusable="false"
      >
        <defs>
          <symbol
            id="icon-chevron-down-12"
            viewBox="0 0 12 12"
          >
            <path
              clip-rule="evenodd"
              d="M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"
              fill-rule="evenodd"
            />
          </symbol>
        </defs>
        <use
          href="#icon-chevron-down-12"
        />
      </svg>
    </span>
    <!--F/-->
  </button>
  <span
    class="fake-menu-button__menu"
    tabindex="-1"
  >
    <ul
      class="fake-menu__items"
      id="s0-@content-menu"
      tabindex="-1"
    />
  </span>
</span>
`;

exports[`menu-button > passes through additional html attributes from child item 1`] = `
<button
  class="fake-menu-button__item class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  style="color:red"
  type="button"
>
  <span />
  <svg
    aria-hidden="true"
    class="icon icon--16"
    focusable="false"
  >
    <defs>
      <symbol
        id="icon-tick-16"
        viewBox="0 0 16 16"
      >
        <path
          clip-rule="evenodd"
          d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
          fill-rule="evenodd"
        />
      </symbol>
    </defs>
    <use
      href="#icon-tick-16"
    />
  </svg>
</button>
`;

exports[`menu-button > passes through additional html attributes from child item 2`] = `
<button
  class="fake-menu-button__item class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  style="color:red"
  type="button"
>
  <span />
  <svg
    aria-hidden="true"
    class="icon icon--16"
    focusable="false"
  >
    <defs>
      <symbol
        id="icon-tick-16"
        viewBox="0 0 16 16"
      >
        <path
          clip-rule="evenodd"
          d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
          fill-rule="evenodd"
        />
      </symbol>
    </defs>
    <use
      href="#icon-tick-16"
    />
  </svg>
</button>
`;

exports[`menu-button > renders basic version 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"fake-menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-label[39m=[32m"Menu A11y Text"[39m
      [33mclass[39m=[32m"fake-menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"btn__cell"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Menu[0m
        [36m</span>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"fake-menu-button__menu"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<ul[39m
        [33mclass[39m=[32m"fake-menu__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#0"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 0[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-tick-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33mclip-rule[39m=[32m"evenodd"[39m
                    [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                    [33mfill-rule[39m=[32m"evenodd"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#1"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 1[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
      [36m</ul>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with a custom label 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"fake-menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-label[39m=[32m"Menu A11y Text"[39m
      [33mclass[39m=[32m"fake-menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"btn__cell menu-button__control--custom-label"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"custom_label"[39m
        [36m>[39m
          [0mcustom label text[0m
        [36m</span>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"fake-menu-button__menu"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<ul[39m
        [33mclass[39m=[32m"fake-menu__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#0"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 0[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-tick-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33mclip-rule[39m=[32m"evenodd"[39m
                    [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                    [33mfill-rule[39m=[32m"evenodd"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#1"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 1[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
      [36m</ul>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with borderless=true 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"fake-menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-label[39m=[32m"Menu A11y Text"[39m
      [33mclass[39m=[32m"fake-menu-button__button btn btn--borderless"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"btn__cell"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Menu[0m
        [36m</span>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"fake-menu-button__menu"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<ul[39m
        [33mclass[39m=[32m"fake-menu__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#0"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 0[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-tick-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33mclip-rule[39m=[32m"evenodd"[39m
                    [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                    [33mfill-rule[39m=[32m"evenodd"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#1"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 1[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
      [36m</ul>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with button variant 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"fake-menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33mclass[39m=[32m"fake-menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33micon-only[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"btn__cell"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"fake-menu-button__menu"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<ul[39m
        [33mclass[39m=[32m"fake-menu__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m/>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with disabled state 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"fake-menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-label[39m=[32m"Menu A11y Text"[39m
      [33mclass[39m=[32m"fake-menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mdisabled[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"btn__cell"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Menu[0m
        [36m</span>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"fake-menu-button__menu"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<ul[39m
        [33mclass[39m=[32m"fake-menu__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#0"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 0[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-tick-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33mclip-rule[39m=[32m"evenodd"[39m
                    [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                    [33mfill-rule[39m=[32m"evenodd"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#1"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 1[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#2"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 2[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
      [36m</ul>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with fix-width=true 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"fake-menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-label[39m=[32m"Menu A11y Text"[39m
      [33mclass[39m=[32m"fake-menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"btn__cell"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Menu[0m
        [36m</span>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"fake-menu-button__menu fake-menu-button__menu--fix-width"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<ul[39m
        [33mclass[39m=[32m"fake-menu__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#0"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 0[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-tick-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33mclip-rule[39m=[32m"evenodd"[39m
                    [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                    [33mfill-rule[39m=[32m"evenodd"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#1"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 1[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
      [36m</ul>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with fixed strategy 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"fake-menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-label[39m=[32m"Menu A11y Text"[39m
      [33mclass[39m=[32m"fake-menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"btn__cell"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Menu[0m
        [36m</span>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"fake-menu-button__menu fake-menu-button__menu--fixed"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<ul[39m
        [33mclass[39m=[32m"fake-menu__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#0"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 0[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-tick-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33mclip-rule[39m=[32m"evenodd"[39m
                    [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                    [33mfill-rule[39m=[32m"evenodd"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#1"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 1[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
      [36m</ul>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with icon 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"fake-menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-label[39m=[32m"Menu A11y Text"[39m
      [33mclass[39m=[32m"fake-menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"btn__cell"[39m
      [36m>[39m
        [0micon content[0m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"fake-menu-button__menu"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<ul[39m
        [33mclass[39m=[32m"fake-menu__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#0"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 0[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-tick-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33mclip-rule[39m=[32m"evenodd"[39m
                    [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                    [33mfill-rule[39m=[32m"evenodd"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#1"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 1[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
      [36m</ul>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with overflow variant 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"fake-menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-label[39m=[32m"Menu A11y Text"[39m
      [33mclass[39m=[32m"fake-menu-button__button icon-btn"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-overflow-vertical-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"M8 4.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Zm0 10a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM9.5 8a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-overflow-vertical-16"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"fake-menu-button__menu fake-menu-button__menu--reverse"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<ul[39m
        [33mclass[39m=[32m"fake-menu__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#0"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 0[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-tick-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33mclip-rule[39m=[32m"evenodd"[39m
                    [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                    [33mfill-rule[39m=[32m"evenodd"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#1"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 1[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
      [36m</ul>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with reverse=true 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"fake-menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-label[39m=[32m"Menu A11y Text"[39m
      [33mclass[39m=[32m"fake-menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"btn__cell"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Menu[0m
        [36m</span>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"fake-menu-button__menu fake-menu-button__menu--reverse"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<ul[39m
        [33mclass[39m=[32m"fake-menu__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#0"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 0[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-tick-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33mclip-rule[39m=[32m"evenodd"[39m
                    [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                    [33mfill-rule[39m=[32m"evenodd"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#1"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 1[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
      [36m</ul>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with separators 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"fake-menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-label[39m=[32m"Menu A11y Text"[39m
      [33mclass[39m=[32m"fake-menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"btn__cell"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Menu[0m
        [36m</span>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"fake-menu-button__menu"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<ul[39m
        [33mclass[39m=[32m"fake-menu__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#0"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 0[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-tick-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33mclip-rule[39m=[32m"evenodd"[39m
                    [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                    [33mfill-rule[39m=[32m"evenodd"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#1"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 1[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
        [36m<li>[39m
          [36m<hr[39m
            [33mclass[39m=[32m"fake-menu-button__separator"[39m
            [33mrole[39m=[32m"separator"[39m
          [36m/>[39m
        [36m</li>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#3"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 3[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
      [36m</ul>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with size=small 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"fake-menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-label[39m=[32m"Menu A11y Text"[39m
      [33mclass[39m=[32m"fake-menu-button__button btn btn--small btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"btn__cell"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Menu[0m
        [36m</span>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"fake-menu-button__menu"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<ul[39m
        [33mclass[39m=[32m"fake-menu__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#0"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 0[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-tick-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33mclip-rule[39m=[32m"evenodd"[39m
                    [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                    [33mfill-rule[39m=[32m"evenodd"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#1"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 1[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
      [36m</ul>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders without toggle icon 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"fake-menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-label[39m=[32m"Menu A11y Text"[39m
      [33mclass[39m=[32m"fake-menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mno-toggle-icon[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"btn__cell"[39m
      [36m>[39m
        [36m<span>[39m
          [0mBasic Menu[0m
        [36m</span>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"fake-menu-button__menu"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<ul[39m
        [33mclass[39m=[32m"fake-menu__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mtabindex[39m=[32m"-1"[39m
      [36m>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#0"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 0[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-tick-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33mclip-rule[39m=[32m"evenodd"[39m
                    [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                    [33mfill-rule[39m=[32m"evenodd"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
        [36m<li>[39m
          [36m<a[39m
            [33mclass[39m=[32m"fake-menu-button__item"[39m
            [33mhref[39m=[32m"#1"[39m
          [36m>[39m
            [36m<span>[39m
              [0mItem text 1[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-tick-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</a>[39m
        [36m</li>[39m
      [36m</ul>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;
